@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+Fixes:
+* Fixed several bugs in classification of numerals in Tagset::CS::Pdt.
+
+
+
 2.028     2014-12-20 13:21:11+01:00 Europe/Prague
 
 Drivers:
